# auto-boss

./: .env.example  .gitignore  README.md  SKILL.md  auto_greeting.py  auto_resume_collect.py  base_bot.py  browser_manager.py  config.py  cookies.json  page_debug.html  page_objects.py  pyproject.toml  requirements.txt  run_with_filter_debug.py  selenium_utils.py
.trae/skills/auto-git-operation/: SKILL.md
legacy/: README.md  auto_greeting.py  auto_resume_collect.py  browser_manager.py
src/boss_helper/: __init__.py
src/boss_helper/config/: selectors.py  selectors.yaml  settings.py
src/boss_helper/core/: __init__.py  browser.py  exceptions.py
src/boss_helper/pages/: __init__.py  base.py  chat.py  recommend.py
src/boss_helper/services/: __init__.py  greeting.py  resume.py
src/boss_helper/utils/: __init__.py  helpers.py  wait.py
tests/: __init__.py  conftest.py  test_config.py  test_exceptions.py  test_selectors.py  test_utils.py
